--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "buffer-hexdump": "^1.0.0",
+    "cross-fetch": "^4.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "yargs": "^17.7.2"
   }
 }
